# proceduralcities

./: .gitignore  CMakeLists.txt  README.md
cmake/: env.cmake
include/: Area.h  AreaLine.h  Floor.h  LineMesh.h  Mesh.h  Program.h  Renderable.h  Shader.h  StreetMap.h  TriangleMesh.h  camera.h  debuggl.h
include/generation/building/: Building.h
include/generation/street/: Attributes.h  GlobalGoals.h  Intersection.h  LocalConstraints.h  Modules.h  Parser.h  StreetSegment.h
resources/model/: area.map  population.map
resources/shaders/: buildings.frag  default.frag  default.geom  default.vert  floor.frag  lines.geom  parks.frag  street.geom  streets.frag  water.frag
src/: Area.cpp  AreaLine.cpp  CMakeLists.txt  Floor.cpp  LineMesh.cpp  Mesh.cpp  Program.cpp  Renderable.cpp  Shader.cpp  StreetMap.cpp  TriangleMesh.cpp  camera.cpp  debuggl.cc  debuggl.cpp  main.cpp
src/generation/building/: Building.cpp
src/generation/street/: GlobalGoals.cpp  Intersection.cpp  LocalConstraints.cpp  Modules.cpp  Parser.cpp  StreetSegment.cpp
test/: CMakeLists.txt  IntersectionTest.cpp  parseTest.cpp
